# dotfiles

./: .Xresources  .clang-format  .gitignore  .gitmodules  .xprofile  .zprofile  README.md  applications.sh  gitignore_global  hyper.js  install  install.conf.yaml  packages.sh  setup.sh  setup_git.sh  setup_homebrew.sh  setup_hyper_settings.sh  setup_vs_code.sh  vs_code_settings_template.json  vs_code_synclocalsettings_template.json  vscode-settings  zshrc
.config/: mimeapps.list  picom.conf
.config/clangd/: clang-format  config.yaml
.config/cron/: crontab
.config/dunst/: dunstrc
.config/fontconfig/: fonts.conf
.config/git/: config
.config/gtk-2.0/: gtkrc-2.0
.config/gtk-3.0/: settings.ini
.config/lf/: icons  lfrc
.config/mpd/: mpd.conf
.config/mpv/: input.conf  mpv.conf
.config/ncmpcpp/: config
.config/newsboat/: config  urls
.config/nvim/: test
.config/picom/: picom.conf
.config/ranger/: rc.conf
.config/redshift/: redshift.conf
.config/x11/: xinitrc  xprofile  xresources
.config/yt-dlp/: config
.config/zsh/: .zcompdump  zprofile  zshrc
.config/zsh/sourced/: aliases  completion  exports  functions  keybindings
.github/: README.md
.local/share/: bg
.local/share/icons/dunst/: index.theme
.local/share/programming/templates/cmake/: .cmake-format.yaml  CMakeLists.txt  build.sh
.local/share/programming/templates/cmake/src/: CMakeLists.txt
.local/share/programming/templates/github/workflows/: clang-format-check.yml
nvim/: coc-settings.json  init.vim  install
nvim/lua/: telescope.lua
nvim/lua/kelvin/: bufferline.lua  init.lua  lsp.lua  lualine.lua  nvimtree.lua  telescope.lua
nvim/plugin/: coc.vim  lsp.vim  lsptrouble.vim  nerdtree.vim  sets.vim  telescope.vim  visualmulti.vim
scripts/: .xinitrc  remaps  xmodmap
setup/: config.sh  install_applications.sh  install_packages.sh  setup.sh  setup_git.sh  setup_homebrew.sh  setup_hyper_settings.sh  setup_vs_code.sh  setup_zsh.sh
setup/mac/: mac-settings.sh
sourced/: aliases  exports  paths
zsh/: zshrc
zsh/sourced/: aliases  key-bindings.zsh
